# Cool-Fractal-Viewer

./: .clang-format  CMakeLists.txt  README.md  config.h.in  ezformat.sh  fractal.cpp  icon.xpm  linux.sh  load_xpm.h  sdl2-config.cmake  sierpinski.h  windows.sh
.github/workflows/: cmake.yml
toolchains/: gcc-x86_64.cmake  mingw-w64-x86_64.cmake
